Display menu icon in iPhone X+ in landscape

BUG=697837, 698726

Review-Url: https://codereview.chromium.org/2732993002
Cr-Commit-Position: refs/heads/master@{#454861}

Former-commit-id: 70079b5955de2a047669c39938839851fb107b44