ios/chrome/browser/ui/reading_list/reading_list_empty_collection_background.mm
@@ -108,7 +108,9 @@ const CGFloat kPercentageFromTopForPosition = 0.4;
     NSString* accessibilityInstructionString = @":";
 
     // Add the images inside the string.
-    if (IsCompact()) {
+    if (IsCompact() || !IsIPadIdiom()) {
+      // TODO(crbug.com/698726): When the share icon is displayed in the toolbar
+      // for landscape iPhone 6+, remove !IsIPadIdiom().
       // If the device has a compact display the share menu is accessed from the
       // toolbar menu. If it is expanded, the share menu is directly accessible.
       [self attachIconNamed:kToolbarMenuIcon
